Modified ProbabilityBox, it is now able to spot contradictions and list them in the unspecified list.